--- a/index.html
+++ b/index.html
@@ -162,18 +162,15 @@ section p{max-width:700px;margin:0 auto;font-size:1rem;line-height:1.6}
 <div class="footer2">
   Courtesy: Your Loving Children ❤️
   <br>
-  <a
-    class="contact-btn"
-    href="https://wa.me/2348035136884?text=Hi%2C%20I%20have%20some%20wishes%20for%20you"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Send Wishes
+  <a class="wish-btn" 
+     href="https://wa.me/2348035136884?text=Hi,%20I%20have%20some%20wishes%20for%20you"
+     target="_blank">
+    <mark>Send Wishes</mark>
   </a>
 </div>
 
  <!-- AUDIO TAG: make sure birthday.mp3 is in the same folder as this HTML file -->
-<audio id="birthday-audio" src="birthday.MP3"></audio>
+<audio id="graduation-audio" src="graduation.MP3"></audio>
 
 <!-- PERMISSION BOX -->
 <div id="permission-box">
