--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ section p{max-width:700px;margin:0 auto;font-size:1rem;line-height:1.6}
 </div>
 
  <!-- AUDIO TAG: make sure birthday.mp3 is in the same folder as this HTML file -->
-<audio id="graduation-audio" src="graduation.MP3"></audio>
+<audio id="graduation-audio" src="graduation.mp3"></audio>
 
 <!-- PERMISSION BOX -->
 <div id="permission-box">
